modal close button z-index fix

--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -202,6 +202,7 @@
     }
 
     .closeIcon svg {
+        z-index: 1;
         display: none;
         position: absolute;
         top: 1rem;
